# unhack-engine

./: .gitignore  README.md  stack.yaml  unhack-core.cabal  unhack-engine.cabal  unhack.yml
app/: Main.hs
src/: Command.hs  Unhack.hs
src/Unhack/: Commit.hs  Config.hs  ElasticSearch.hs  Filter.hs  Git.hs  Issue.hs  Parser.hs  Process.hs  Project.hs  Types.hs  Util.hs
src/Unhack/Cmd/: Indexes.hs  Modes.hs  PubSub.hs
src/Unhack/Data/: Branch.hs  EmBranch.hs  EmCommit.hs  EmIssueCommit.hs  EmProjectRepository.hs  EmbeddedRepository.hs  GitCommit.hs  IssueProperties.hs  Project.hs  Repository.hs
src/Unhack/Git/: Branch.hs  Commit.hs  Config.hs  Contents.hs  Fetch.hs  Location.hs  Tree.hs
src/Unhack/Parser/: Version2.hs
src/Unhack/Pubsub/: Dispatcher.hs  Publish.hs  Repository.hs  Router.hs
src/Unhack/Pubsub/Repository/: Delete.hs
src/Unhack/Storage/: Config.hs
src/Unhack/Storage/ElasticSearch/: Config.hs  Operations.hs  Types.hs
src/Unhack/Storage/ElasticSearch/Data/: Branch.hs  Commit.hs  Project.hs  Repository.hs
src/Unhack/Storage/ElasticSearch/Mappings/: Branch.hs  Commit.hs  Issue.hs  Project.hs  Repository.hs
