name:                unhack-core
version:             0.1.0.0
synopsis:            A command line utility for managing issues in the code in Unhack style.
description:         Please see README.md
homepage:            https://bitbucket.org/krystalcode/unhack-core
license:             BSD3
license-file:        LICENSE
author:              Dimitris Bozelos
maintainer:          dbozelos@gmail.com
copyright:           2016 Dimitris Bozelos
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Unhack.Build.Action
                     , Unhack.Build.Condition
                     , Unhack.Build.Rule
                     , Unhack.Commit
                     , Unhack.Config
                     , Unhack.Data.Branch
                     , Unhack.Data.EmBranch
                     , Unhack.Data.EmCommit
                     , Unhack.Cmd.Indexes
                     , Unhack.Cmd.Modes
                     , Unhack.Cmd.PubSub
                     , Unhack.Git.Commit
                     , Unhack.Git.Config
                     , Unhack.Git.Contents
                     , Unhack.Git.Branch
                     , Unhack.Git.Fetch
                     , Unhack.Git.Location
                     , Unhack.Git.Tree
                     , Unhack.Issue
                     , Unhack.Pubsub.Dispatcher
                     , Unhack.Pubsub.Repository
                     , Unhack.Pubsub.Router
                     , Unhack.Parser
                     , Unhack.Process
                     , Unhack.Data.EmIssueCommit
                     , Unhack.Data.Repository
                     , Unhack.Data.EmbeddedRepository
                     , Unhack.Storage.ElasticSearch.Config
                     , Unhack.Storage.ElasticSearch.Data.Commit
                     , Unhack.Storage.ElasticSearch.Data.Repository
                     , Unhack.Storage.ElasticSearch.Operations
  build-depends:       aeson >= 0.10.0.0 && < 1
                     , attoparsec >= 0.13.0.1 && < 1
                     , base >= 4.7 && < 5
                     , binary >= 0.7.5.0 && < 1
                     , bloodhound >= 0.10.0.0 && < 1
                     , bytestring >= 0.10.6.0 && < 1
                     , cmdargs >= 0.10 && < 1
                     , directory >= 1.2.2.0 && < 2
                     , Glob >= 0.7.5 && < 1
                     , hedis >= 0.7.6 && < 1
                     , http-client >= 0.4.26.2 && < 1
                     , process >= 1.2.3.0 && < 2
                     , random >= 1.1 && < 2
                     , regex-pcre >= 0.94.4 && < 1
                     , text >= 1.2.2.0 && < 2
                     , vector >= 0.11.0.0 && < 1
                     , yaml >= 0.8.15.1 && < 1
  default-language:    Haskell2010

executable unhack-core-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , unhack-core
  default-language:    Haskell2010

test-suite unhack-core-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , unhack-core
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git@bitbucket.org:krystalcode/unhack-core.git
